--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Body */
 
 body{
-         font-family: 'Roboto', 'Raleway', 'sans-serif';
+         font-family: 'Roboto', 'sans-serif';
          color: #2E2F42;
          background-color: #fff;
 }
@@ -13,10 +13,10 @@ body{
 }
 
 .logotype{
-        font-family: Raleway;
+        font-family: 'Raleway', 'sans-serif';
         font-size: 18px;
         font-weight: 700;
-        line-height: 1.1;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         text-decoration: none;
