--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Body */
 
 body{
-         font-family: 'Roboto', 'sans-serif';
+         font-family: "Roboto", sans-serif;
          color: #2E2F42;
          background-color: #fff;
 }
