--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 .logotype{
-        font-family: 'Raleway', 'sans-serif';
+        font-family: "Raleway", sans-serif;
         font-size: 18px;
         font-weight: 700;
         line-height: 1.17;
