--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
         letter-spacing: 0.03em;
         text-transform: uppercase;
         text-decoration: none;
+        color: #4d5ae5;
 
 }
 
