--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body{
 
 .link{
         text-decoration: none;
+        color: #2e2f42;
+        line-height: 1.5
+        letter-spacing: 0.02em
 }
 
 .logotype{
@@ -34,7 +37,6 @@ body{
         line-height: 1.5;
         letter-spacing: 0.32px;
         list-style-type: none;
-        color: #2e2f42;
 }
 .social-link{
         font-size: 16px;
