--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body{
 .link{
         text-decoration: none;
         color: #2e2f42;
-        line-height: 1.5
-        letter-spacing: 0.02em
 }
 
 .logotype{
@@ -41,7 +39,7 @@ body{
 .social-link{
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.5
+        line-height: 1.5;
         letter-spacing: 0.02em;
         list-style-type: none;
         color: #434455;
