--- a/css/style.css
+++ b/css/style.css
@@ -67,15 +67,17 @@ body{
         line-height: 1.07;
         letter-spacing: 0.02em;
         color: #fff;
+        text-align: center
 }
 .hero-image-button{
         color: #FFFFFF;
         background-color: #4D5AE5;
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.04em;
+        cursor: pointer;
 }
 .hero-image-button:hover,
 .hero-image-button:focus{
@@ -93,6 +95,7 @@ body{
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 .feature-text{
         font-size: 16px;
