--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,13 @@ body{
         font-weight: 700;
         line-height: 1.11;
         letter-spacing: 0.02em;
+        text-align: center;
+        text-transform: capitalize;
+        color: #2e2f42;
+}
+
+.team-list{
+        background-color: #FFFFFF
 }
 
 .team-title-name{
@@ -127,6 +134,7 @@ body{
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 .team-text{
         font-size: 16px;
