--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body{
     color: #404BBF;
 }
 .social-adress{
-        font-style: normal
+        font-style: normal;
 }
 
 /* Hero Image */
@@ -67,7 +67,7 @@ body{
         line-height: 1.07;
         letter-spacing: 0.02em;
         color: #fff;
-        text-align: center
+        text-align: center;
 }
 .hero-image-button{
         color: #FFFFFF;
@@ -152,6 +152,7 @@ body{
         font-weight: 700;
         line-height: 1.1;
         letter-spacing: 0.02em;
+        text-align: center;
 }
 
 .portfolio-title-name{
